--- a/index.html
+++ b/index.html
@@ -5,42 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SVG Preview Widget</title>
   <style>
-    body { font-family: sans-serif; padding: 1em; max-width: 600px; margin: auto; }
+    body { font-family: sans-serif; padding: 1em; max-width: 800px; margin: auto; }
     label { display: inline-block; margin: 0.5em 0; }
-    input[type="number"] { width: 4em; }
-    input[type="range"] { width: 100px; vertical-align: middle; }
+    input[type="number"] { width: 5em; }
+    input[type="range"] { width: 120px; vertical-align: middle; }
     button { margin-left: 0.5em; }
-    #preview { border: 1px solid #ccc; padding: 0.5em; margin-top: 1em; background: #f9f9f9; }
-    #staticPreview { display: block; margin-top: 1em; max-width: 100%; border: 1px solid #666; }
+    #preview, #svgList { margin-top: 1em; }
+    #svgList { list-style: none; padding: 0; }
+    #svgList li { padding: 0.3em; cursor: pointer; }
+    #svgList li.selected { background: #def; }
+    #mainCanvas { display: block; margin-top: 1em; border: 1px solid #666; max-width: 100%; }
   </style>
 </head>
 <body>
-  <h1>Upload &amp; Preview Your SVG</h1>
+  <h1>Upload &amp; Preview Your SVGs</h1>
 
-  <!-- File input & controls -->
-  <input type="file" id="fileInput" accept=".svg" />
-  <div style="margin-top: 1em;">
-    <label>Width (in): <input type="number" id="widthInput" placeholder="3.5" step="any" /></label>
-    <label>Height (in): <input type="number" id="heightInput" placeholder="2" step="any" /></label>
-    <button id="renderBtn">Generate Static Preview</button>
+  <input type="file" id="fileInput" accept=".svg" multiple />
+  <div>
+    <label>Canvas Width (in): <input type="number" id="widthInput" step="any" placeholder="e.g. 3.5" /></label>
+    <label>Canvas Height (in): <input type="number" id="heightInput" step="any" placeholder="e.g. 2" /></label>
+    <button id="renderBtn">Render Canvas</button>
     <label>
-      Scale:
-      <input type="range" id="scaleSlider" min="10" max="200" step="1" value="100" />
+      Scale: <input type="range" id="scaleSlider" min="10" max="200" value="100" />
       <span id="scaleValue">100%</span>
     </label>
     <button id="toggleOrientation">Switch to Landscape</button>
+    <button id="exportBtn">Export Canvas</button>
   </div>
 
-    <!-- Static preview -->
-  <img id="staticPreview" alt="Static SVG Preview" />
-  
-  <!-- Live preview -->
-  <p id="dimensions">Width: — Height: —</p>
-  <div id="preview"></div>
+  <ul id="svgList"></ul>
+  <canvas id="mainCanvas"></canvas>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      let uploadedSvgText = null;
+      const images = []; // {id, image, origW, origH, fitScale, scalePercent, x, y}
+      let selectedId = null;
+      let dragging = false;
+      let dragOffset = { x: 0, y: 0 };
+
       const fileInput = document.getElementById('fileInput');
       const widthInput = document.getElementById('widthInput');
       const heightInput = document.getElementById('heightInput');
@@ -48,92 +50,184 @@
       const scaleSlider = document.getElementById('scaleSlider');
       const scaleValue = document.getElementById('scaleValue');
       const toggleOrient = document.getElementById('toggleOrientation');
-      const dims = document.getElementById('dimensions');
-      const preview = document.getElementById('preview');
-      const staticImg = document.getElementById('staticPreview');
+      const exportBtn = document.getElementById('exportBtn');
+      const svgList = document.getElementById('svgList');
+      const canvas = document.getElementById('mainCanvas');
+      const ctx = canvas.getContext('2d');
 
-      // Scale slider handler
-      scaleSlider.addEventListener('input', () => {
-        scaleValue.textContent = scaleSlider.value + '%';
-        if (uploadedSvgText) renderBtn.click();
-      });
+      const DPI = 96;
+      const borderPx = 4;
 
-      // Handle SVG upload & live preview
-      fileInput.addEventListener('change', e => {
-        const file = e.target.files[0]; if (!file) return;
-        const reader = new FileReader();
-        reader.onload = evt => {
-          uploadedSvgText = evt.target.result;
-          const parser = new DOMParser();
-          const svgDoc = parser.parseFromString(uploadedSvgText, 'image/svg+xml');
-          const svgEl = svgDoc.documentElement;
-          let w = svgEl.getAttribute('width');
-          let h = svgEl.getAttribute('height');
-          if (!w || !h) {
-            const vb = svgEl.getAttribute('viewBox'); if (vb) { const parts = vb.split(' '); w = parts[2]; h = parts[3]; }
-          }
-          dims.textContent = `Width: ${w}px Height: ${h}px`;
-          preview.innerHTML = uploadedSvgText;
-          renderBtn.click();
-        };
-        reader.readAsText(file);
-      });
+      function redrawAll() {
+        const wIn = parseFloat(widthInput.value);
+        const hIn = parseFloat(heightInput.value);
+        if (!(wIn > 0 && hIn > 0)) return;
+        const wPx = Math.round(wIn * DPI);
+        const hPx = Math.round(hIn * DPI);
+        canvas.width = wPx + borderPx * 2;
+        canvas.height = hPx + borderPx * 2;
 
-      // Generate static preview
-      renderBtn.addEventListener('click', () => {
-        if (!uploadedSvgText) { alert('Please upload an SVG first!'); return; }
-        const wIn = parseFloat(widthInput.value); const hIn = parseFloat(heightInput.value);
-        if (!(wIn > 0 && hIn > 0)) { alert('Enter valid width/height in inches.'); return; }
-        const DPI = 96; const wPx = Math.round(wIn * DPI); const hPx = Math.round(hIn * DPI);
-        const percent = parseFloat(scaleSlider.value) / 100;
-        drawSvgWithBorder(uploadedSvgText, wPx, hPx, 6, percent, wIn, hIn);
-      });
+        // background
+        ctx.fillStyle = '#fff';
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      // Toggle orientation
-      toggleOrient.addEventListener('click', () => {
-        const tmp = widthInput.value; widthInput.value = heightInput.value; heightInput.value = tmp;
-        toggleOrient.textContent = toggleOrient.textContent.includes('Landscape')
-          ? 'Switch to Portrait' : 'Switch to Landscape';
-        if (uploadedSvgText) renderBtn.click();
-      });
-
-      function drawSvgWithBorder(svgText, wPx, hPx, borderPx = 4, scalePercent = 1, wIn = 0, hIn = 0) {
-        const parser = new DOMParser();
-        const svgDoc = parser.parseFromString(svgText, 'image/svg+xml');
-        const svgEl = svgDoc.documentElement;
-        let origW = parseFloat(svgEl.getAttribute('width'));
-        let origH = parseFloat(svgEl.getAttribute('height'));
-        if (!origW || !origH) {
-          const vb = svgEl.getAttribute('viewBox')?.split(' ');
-          origW = parseFloat(vb?.[2] || wPx); origH = parseFloat(vb?.[3] || hPx);
-        }
-        const fitScale = Math.min(wPx/origW, hPx/origH);
-        const scale = fitScale * scalePercent;
-        const drawW = origW * scale; const drawH = origH * scale;
-
-        const canvas = document.createElement('canvas');
-        canvas.width = wPx + borderPx * 2; canvas.height = hPx + borderPx * 2;
-        const ctx = canvas.getContext('2d');
-        ctx.fillStyle = '#fff'; ctx.fillRect(0, 0, canvas.width, canvas.height);
-        ctx.lineWidth = borderPx; ctx.strokeStyle = '#000';
+        // border
+        ctx.lineWidth = borderPx;
+        ctx.strokeStyle = '#000';
         ctx.strokeRect(borderPx/2, borderPx/2, wPx + borderPx, hPx + borderPx);
 
-        const blob = new Blob([svgText], { type: 'image/svg+xml' });
-        const url = URL.createObjectURL(blob);
-        const img = new Image(); img.onload = () => {
-          const x = borderPx + (wPx - drawW) / 2;
-          const y = borderPx + (hPx - drawH) / 2;
-          ctx.drawImage(img, x, y, drawW, drawH);
-          URL.revokeObjectURL(url);
-          // Draw inch labels
-          ctx.fillStyle = '#000'; ctx.font = '16px sans-serif'; ctx.textAlign = 'center';
-          ctx.fillText(`${wIn}"`, borderPx + wPx/2, canvas.height - 4);
-          ctx.save(); ctx.translate(canvas.width - 4, borderPx + hPx/2);
-          ctx.rotate(Math.PI/2); ctx.fillText(`${hIn}"`, 0, 0); ctx.restore();
-          staticImg.src = canvas.toDataURL('image/png');
-        };
-        img.src = url;
+        // labels inches
+        ctx.fillStyle = '#000';
+        ctx.font = '16px sans-serif';
+        ctx.textAlign = 'center';
+        ctx.fillText(`${wIn}\"`, borderPx + wPx/2, canvas.height - 4);
+        ctx.save();
+        ctx.translate(canvas.width - 4, borderPx + hPx/2);
+        ctx.rotate(Math.PI/2);
+        ctx.fillText(`${hIn}\"`, 0, 0);
+        ctx.restore();
+
+        // draw images
+        images.forEach(item => {
+          const drawW = item.origW * item.fitScale * item.scalePercent;
+          const drawH = item.origH * item.fitScale * item.scalePercent;
+          ctx.drawImage(item.image, item.x, item.y, drawW, drawH);
+          // highlight selected
+          if (item.id === selectedId) {
+            ctx.lineWidth = 2;
+            ctx.strokeStyle = 'red';
+            ctx.strokeRect(item.x, item.y, drawW, drawH);
+          }
+        });
       }
+
+      function updateList() {
+        svgList.innerHTML = '';
+        images.forEach((item, index) => {
+          const li = document.createElement('li');
+          li.textContent = `SVG ${index + 1}`;
+          li.dataset.id = item.id;
+          if (item.id === selectedId) li.classList.add('selected');
+          svgList.appendChild(li);
+        });
+      }
+
+      function selectImage(id) {
+        selectedId = id;
+        updateList();
+        const item = images.find(i => i.id === id);
+        scaleSlider.value = Math.round(item.scalePercent * 100);
+        scaleValue.textContent = `${scaleSlider.value}%`;
+      }
+
+      svgList.addEventListener('click', e => {
+        const li = e.target.closest('li');
+        if (!li) return;
+        selectImage(li.dataset.id);
+      });
+
+      scaleSlider.addEventListener('input', () => {
+        scaleValue.textContent = scaleSlider.value + '%';
+        const item = images.find(i => i.id === selectedId);
+        if (!item) return;
+        item.scalePercent = scaleSlider.value / 100;
+        redrawAll();
+      });
+
+      renderBtn.addEventListener('click', () => {
+        redrawAll();
+      });
+
+      toggleOrient.addEventListener('click', () => {
+        const tmp = widthInput.value;
+        widthInput.value = heightInput.value;
+        heightInput.value = tmp;
+        toggleOrient.textContent = toggleOrient.textContent.includes('Landscape')
+          ? 'Switch to Portrait' : 'Switch to Landscape';
+        redrawAll();
+      });
+
+      exportBtn.addEventListener('click', () => {
+        const dataURL = canvas.toDataURL('image/png');
+        const link = document.createElement('a');
+        link.href = dataURL;
+        link.download = 'canvas-export.png';
+        link.click();
+      });
+
+      canvas.addEventListener('mousedown', e => {
+        const rect = canvas.getBoundingClientRect();
+        const x = e.clientX - rect.left;
+        const y = e.clientY - rect.top;
+        const item = images.find(i => i.id === selectedId);
+        if (!item) return;
+        const drawW = item.origW * item.fitScale * item.scalePercent;
+        const drawH = item.origH * item.fitScale * item.scalePercent;
+        if (x >= item.x && x <= item.x + drawW && y >= item.y && y <= item.y + drawH) {
+          dragging = true;
+          dragOffset.x = x - item.x;
+          dragOffset.y = y - item.y;
+        }
+      });
+
+      canvas.addEventListener('mousemove', e => {
+        if (!dragging) return;
+        const rect = canvas.getBoundingClientRect();
+        const x = e.clientX - rect.left;
+        const y = e.clientY - rect.top;
+        const item = images.find(i => i.id === selectedId);
+        item.x = x - dragOffset.x;
+        item.y = y - dragOffset.y;
+        redrawAll();
+      });
+
+      ['mouseup', 'mouseleave'].forEach(evt =>
+        canvas.addEventListener(evt, () => { dragging = false; })
+      );
+
+      fileInput.addEventListener('change', e => {
+        const files = Array.from(e.target.files);
+        files.forEach(file => {
+          const reader = new FileReader();
+          reader.onload = evt => {
+            const svgText = evt.target.result;
+            const parser = new DOMParser();
+            const svgDoc = parser.parseFromString(svgText, 'image/svg+xml');
+            const svgEl = svgDoc.documentElement;
+            let origW = parseFloat(svgEl.getAttribute('width'));
+            let origH = parseFloat(svgEl.getAttribute('height'));
+            if (!origW || !origH) {
+              const vb = svgEl.getAttribute('viewBox')?.split(' ');
+              origW = parseFloat(vb[2]);
+              origH = parseFloat(vb[3]);
+            }
+            const wIn = parseFloat(widthInput.value);
+            const hIn = parseFloat(heightInput.value);
+            if (!(wIn > 0 && hIn > 0)) return alert('Set canvas size before adding SVGs');
+            const wPx = Math.round(wIn * DPI);
+            const hPx = Math.round(hIn * DPI);
+            const fitScale = Math.min(wPx/origW, hPx/origH);
+            const id = Date.now() + '_' + Math.random();
+            const blob = new Blob([svgText], { type: 'image/svg+xml' });
+            const url = URL.createObjectURL(blob);
+            const img = new Image();
+            img.onload = () => {
+              URL.revokeObjectURL(url);
+              const scalePercent = 1;
+              const drawW = origW * fitScale * scalePercent;
+              const drawH = origH * fitScale * scalePercent;
+              const x = borderPx + (wPx - drawW)/2;
+              const y = borderPx + (hPx - drawH)/2;
+              images.push({ id, image: img, origW, origH, fitScale, scalePercent, x, y });
+              updateList();
+              selectImage(id);
+              redrawAll();
+            };
+            img.src = url;
+          };
+          reader.readAsText(file);
+        });
+      });
     });
   </script>
 </body>
